# advent-of-code-2025

./: README.md  adventOfCode2025.cabal
src/: day01p1.hs  day01p2.hs  day02p1.hs  day02p2.hs  day03p1.hs  day03p2.hs  day04p1.hs  day04p2.hs  day05p1.hs  day05p2.hs  day06p1.hs  day06p2.hs  day07p1.hs  day07p2.hs
